# MiniDB

./: .gitignore  CMakeLists.txt
data/: sales.tbl  students.tbl  users.tbl
src/: database.cpp  database.h  main.cpp  row.h  table.cpp  table.h
src/database/: database.cpp  database.h
src/executor/: executor.cpp  executor.h
src/parser/: ast.h  lexer.cpp  lexer.h  sql_parser.cpp  sql_parser.h  token.cpp  token.h
src/storage/: storage_manager.cpp  storage_manager.h  table.cpp  table.h
